# Husky_Navigation

./: README.md
Husky/husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro
Husky/husky_description/urdf/accessories/: camera.xacro
Husky/husky_gazebo/launch/: playpen.launch  spawn_husky.launch
Husky/husky_gazebo/worlds/: RomanSquare_small.world  RomanSquare_small2.world  building_debug.world  building_debug2.world  clearpath_playpen.world
Husky/husky_navigation/: package.xml
Husky/husky_navigation/config/: costmap_exploration.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml
Husky/husky_navigation/launch/: exploration.launch  exploration_demo.launch
Husky/husky_navigation_goals/launch/: send_goal.launch
Husky/husky_navigation_goals/src/: SendHuskyGoal.cpp
Husky/husky_viz/launch/: view_husky.launch  view_robot.launch
Husky/husky_viz/rviz/: robot.rviz  robot2.rviz  robot3.rviz
Husky_LIO-SAM/: CMakeLists.txt  package.xml
Husky_LIO-SAM/config/: localization.yaml  params.yaml  params_husky_hesai40.yaml  params_husky_vlp16.yaml  params_husky_vlp16_test.yaml  params_husky_vlp40.yaml
Husky_LIO-SAM/include/: PointType.h  Scancontext.h  function_utility.h  param_utility.h  utility.h
Husky_LIO-SAM/launch/: Husky_LIO-SAM.launch  RunBag.launch  RunBag_husky_hesai40.launch  hrun.launch  run.launch
Husky_LIO-SAM/launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
Husky_LIO-SAM/launch/include/config/: HESAI40p.urdf.xacro  rviz.rviz
Husky_LIO-SAM/src/: Scancontext.cpp  compare.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
Husky_LIO-SAM/src/LIO-SAM/: imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
Husky_LIO-SAM/src/frame_recon/: FrameRecon.cpp  FrameRecon.h  OutputUtils.cpp
Husky_LIO-SAM/src/frame_recon/include/: ExplicitRec.h
Husky_simulation_control/: CMakeLists.txt  package.xml
Husky_simulation_control/include/husky_simulation_control/: keyboard.h
Husky_simulation_control/launch/: control.launch
Husky_simulation_control/src/: husky_simulation_control.cpp  keyboard.cpp
LOAM/husky_slam_trans/: CMakeLists.txt  package.xml
LOAM/husky_slam_trans/launch/: publish_SLAM_res.launch
LOAM/husky_slam_trans/src/: HuskySLAMTrans.cpp  HuskySLAMTrans.h  main.cpp
LOAM/loam_velodyne/launch/: loam_velodyne.launch
LidarPointCloudReconstruction/aloam/launch/: aloam_velodyne.launch  eval_velodyne.launch  kitti_helper_single_test.launch
LidarPointCloudReconstruction/aloam/rviz_cfg/: aloam_velodyne.rviz
LidarPointCloudReconstruction/aloam/src/: saveCloud.cpp
LidarPointCloudReconstruction/frame_recon/include/: ExplicitRec.h  utility.h
LidarPointCloudReconstruction/frame_recon/src/: ExplicitRec.cpp  SimpleRecon.cpp
LidarPointCloudReconstruction/frame_reconstruction/launch/: reconstruction.launch
LidarPointCloudReconstruction/frame_reconstruction/src/: FrameRecon.cpp  FrameRecon.h
LidarPointCloudReconstruction/frames_fusion/: CMakeLists.txt
LidarPointCloudReconstruction/frames_fusion/launch/: fusion.launch
LidarPointCloudReconstruction/frames_fusion/src/: FramesFusion.cpp
LidarPointCloudReconstruction/fusion_msgs/: CMakeLists.txt
LidarPointCloudReconstruction/fusion_msgs/msg/: FrameRecon.msg
LidarPointCloudReconstruction/hash_fusion/: CMakeLists.txt  package.xml
LidarPointCloudReconstruction/hash_fusion/launch/: fusion.launch
LidarPointCloudReconstruction/hash_fusion/src/: FramesFusion.cpp  FramesFusion.h
LidarPointCloudReconstruction/hash_fusion/src/tools/: VolumeUpdateStrategy.h
LidarPointCloudReconstruction/hash_fusion/src/updater/: MeshUpdater.cpp
LidarPointCloudReconstruction/simple_frame/: CMakeLists.txt
LidarPointCloudReconstruction/simple_frame/launch/: ExplicitRec.cpp  eval_mapping.launch  mapping.launch  reconstruction.launch
LidarPointCloudReconstruction/simple_frame/src/: ExplicitRec.cpp  ExplicitRec.h  FrameRecon.cpp  FrameRecon.h  GHPR.cpp
LidarPointCloudReconstruction/slam_trans/launch/: SLAM_to_map.launch
MeshNavigation/mesh_map/: CMakeLists.txt  package.xml
MeshNavigation/mesh_map/launch/: mesh_map.launch  start.launch
MeshNavigation/mesh_map/src/: MeshMap.cpp  MeshMap.h  main.cpp
MeshNavigation/mesh_navigation/: CMakeLists.txt  package.xml
MeshNavigation/mesh_navigation/include/: DataStructure.h  MeshMap.h  MeshNavigation.h
MeshNavigation/mesh_navigation/include/PathPlanner/: AStar.h  AStar_meshmap.h  AStar_octreemap.h  RRT.h
MeshNavigation/mesh_navigation/include/tools/: ROSPublishMesh.h  ROSPublishPoints.h
MeshNavigation/mesh_navigation/launch/: mesh_map.launch
MeshNavigation/mesh_navigation/src/: MeshMap.cpp  MeshNavigation.cpp
MeshNavigation/mesh_navigation/src/Boundary/: Boundary.cpp  INSAC.cpp  SectorPartition.cpp
MeshNavigation/srv/: multi_recon.srv
TopoMap/topo_confidence_map/: CMakeLists.txt
TopoMap/topo_confidence_map/launch/: mapping.launch
TopoMap/topo_confidence_map/src/: ExtendedGridMap.cpp  HausdorffMeasure.cpp  TopologyMap.cpp
TopoMap/travelable_region/: CMakeLists.txt
TopoMap/travelable_region/src/: GroundExtraction.cpp  GroundExtraction.h
debug_tools/: CMakeLists.txt  package.xml
debug_tools/Nodes/: Traj_1307.484000000.txt
debug_tools/include/: DebugTools.h  ParsePointCloud2.h
debug_tools/launch/: Debug.launch  HuskyRun.launch  HuskyRun_LOAM.launch  PublishNodes.launch  play_bag.launch  run_bag.launch  run_bag_LOAM.launch
debug_tools/rviz/: Debug.rviz  FrameRecon.rviz  FramesFusion.rviz  GtTrans.rviz  PlayBag.rviz  RunBag.rviz  TopoMap.rviz
debug_tools/src/: DebugTools.cpp  ParsePointCloud2.cpp  PublishNodes.cpp  main.cpp
gt_trans/: CMakeLists.txt  package.xml
gt_trans/gt_pose/: latest.7z
gt_trans/gt_pose/latest/: 2023pc_poses.npy  2023pc_poses_kitti.txt  2023pc_poses_tum.txt  config.yml
gt_trans/gt_pose/ourDataset/: underground_garage_exit_poses_kitti.txt
gt_trans/launch/: kitti_helper_simple.launch  publish_gt_res.launch
gt_trans/src/: GtTrans.cpp  GtTrans.h  main.cpp
(+1 files in other folders)
